# email_validator

./: .gitignore  .gitmodules  Cargo.toml  Containerfile  LICENSE  README.md
.github/workflows/: docs.yml  release.yml
aur/: .SRCINFO  PKGBUILD
coredns/: db.local
doc/: api_plan.md  email_validator_flow.puml  program_sequence.puml
src/: ingestion.rs  main.rs  output.rs  precheck.rs  server.rs  validation.rs
tests/: api_e2e.rs  fuzz_ingestion.proptest-regressions  fuzz_ingestion.rs  mass_input_cli.rs  smtp_e2e.rs
tests/common/: mod.rs
