[package]
name = "email_validator"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
csv = "1.3"
tokio = { version = "1.32", features = ["full"] }
check-if-email-exists = "0.11.7"
regex = "1.10"
hickory-resolver = "0.24"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
proptest = "1.5"

[profile.release]
opt-level = "z"     # Größe maximieren
lto = true          # Link-Time-Optimization (fat LTO)
codegen-units = 1   # eine Codegen-Unit → bessere Inline-Optimierung
strip = true        # Debug-Symbole und mehr entfernen
panic = "abort"     # kein Panic-Unwinding → kleineres Binary